--- a/Server/requirements.txt
+++ b/Server/requirements.txt
@@ -1,4 +1,8 @@
-SQLAlchemy=1.3.20
-alembic==1.4.3
-flask==1.1.2
-pylint==2.6.0
+sqlalchemy~=1.3.20
+alembic~=1.4.3
+flask~=1.1.2
+pylint~=2.6.0
+pylint-flask~=0.6
+flask-migrate~=2.5.3
+flask-sqlalchemy~=2.4.4
+flask-restful~=0.3.8
